--- a/estru3dc.csproj
+++ b/estru3dc.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="gircore.gtk-4.0" Version="0.6.3" />
+    <PackageReference Include="OpenTK" Version="4.7.7" />
   </ItemGroup>
 
 </Project>
